feat: wrap Warpcast API methods for signer requests
fix #539
