# src/merkleAPI/swagger/models/SignerRequest.ts
@@ -1,0 +1,63 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Merkle API
+ * API documentation for all publicly exposed APIs provided by Merkle Manufactory, Inc for Farcaster V2.
+ *
+ * The version of the OpenAPI document: 2.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @interface SignerRequest
+ */
+export interface SignerRequest {
+  /**
+   *
+   * @type {string}
+   * @memberof SignerRequest
+   */
+  token: string;
+  /**
+   *
+   * @type {string}
+   * @memberof SignerRequest
+   */
+  publicKey: string;
+  /**
+   *
+   * @type {number}
+   * @memberof SignerRequest
+   */
+  timestamp: number;
+  /**
+   *
+   * @type {string}
+   * @memberof SignerRequest
+   */
+  name: string;
+  /**
+   *
+   * @type {number}
+   * @memberof SignerRequest
+   */
+  fid?: number;
+  /**
+   *
+   * @type {string}
+   * @memberof SignerRequest
+   */
+  messageHash?: string;
+  /**
+   *
+   * @type {string}
+   * @memberof SignerRequest
+   */
+  base64SignedMessage?: string;
+}
