# src/merkleAPI/swagger/models/index.ts
@@ -103,6 +103,12 @@ export * from "./v2-casts-body";
 export * from "./v2-casts-body1";
 export * from "./v2-follows-body";
 export * from "./v2-follows-body1";
+export * from "./v2-signer-request-get200-response";
+export * from "./v2-signer-request-get200-response-result";
+export * from "./SignerRequest";
+export * from "./v2-signer-requests-post200-response";
+export * from "./v2-signer-requests-post200-response-result";
+export * from "./v2-signer-requests-post-request";
 export * from "./v2-recasts-body";
 export * from "./v2-recasts-body1";
 export * from "./v2-watched-casts-body";
