# src/merkleAPI/swagger/models/v2-signer-request-get200-response-result.ts
@@ -1,0 +1,31 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Merkle API
+ * API documentation for all publicly exposed APIs provided by Merkle Manufactory, Inc for Farcaster V2.
+ *
+ * The version of the OpenAPI document: 2.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+// May contain unused imports in some cases
+// @ts-ignore
+import { SignerRequest } from "./SignerRequest";
+
+/**
+ *
+ * @export
+ * @interface V2SignerRequestGet200ResponseResult
+ */
+export interface V2SignerRequestGet200ResponseResult {
+  /**
+   *
+   * @type {SignerRequest}
+   * @memberof V2SignerRequestGet200ResponseResult
+   */
+  signerRequest: SignerRequest;
+}
