# src/merkleAPI/swagger/models/v2-signer-requests-post-request.ts
@@ -1,0 +1,33 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Merkle API
+ * API documentation for all publicly exposed APIs provided by Merkle Manufactory, Inc for Farcaster V2.
+ *
+ * The version of the OpenAPI document: 2.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+/**
+ *
+ * @export
+ * @interface V2SignerRequestsPostRequest
+ */
+export interface V2SignerRequestsPostRequest {
+  /**
+   *
+   * @type {string}
+   * @memberof V2SignerRequestsPostRequest
+   */
+  publicKey: string;
+  /**
+   *
+   * @type {string}
+   * @memberof V2SignerRequestsPostRequest
+   */
+  name: string;
+}
